--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
 
           <ul class="navigation-user-menu">
             <li class="navigation-user-item navigation-search">
-              <a class="navigation-user-link nav-link-icon-search" href="#">
+              <a class="navigation-user-link nav-link-icon-search" href="/modal.html">
                 <span class="visually-hidden">Поиск.</span>
               </a>
             </li>
@@ -215,7 +215,20 @@
                 <p class="products-card-price">От 4000 ₽</p>
                 <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
                 <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
-                <img class="products-card-stars card-buttons-item" src="#" alt="4 звезды">
+                <div class="stars-favorite">
+                  <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3" />
+                  </svg>
+                  <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3" />
+                  </svg>
+                  <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3" />
+                  </svg>
+                  <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3" />
+                  </svg>
+                </div>
                 <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 8,5</span>
               </li>
 
@@ -229,7 +242,20 @@
                 <p class="products-card-price">От 5000 ₽</p>
                 <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
                 <button class="products-card-favorites products-card-favorites-active card-buttons-item">В ИЗБРАННОM</button>
-                <img class="products-card-stars card-buttons-item" src="#" alt="4 звезды">
+                <div class="stars-favorite">
+                  <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3" />
+                  </svg>
+                  <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3" />
+                  </svg>
+                  <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3" />
+                  </svg>
+                  <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3" />
+                  </svg>
+                </div>
                 <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 9,2</span>
               </li>
 
@@ -243,7 +269,17 @@
                 <p class="products-card-price">От 2500 ₽</p>
                 <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
                 <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
-                <img class="products-card-stars card-buttons-item" src="#" alt="3 звезды">
+                <div class="stars-favorite">
+                  <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3" />
+                  </svg>
+                  <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3" />
+                  </svg>
+                  <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3" />
+                  </svg>
+                </div>
                 <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 6,9</span>
               </li>
 
@@ -257,7 +293,14 @@
                 <p class="products-card-price">От 1500 ₽</p>
                 <a class="products-card-link-buttons card-buttons-item" href="#">ПОДРОБНЕЕ</a>
                 <button class="products-card-favorites card-buttons-item">В ИЗБРАННОЕ</button>
-                <img class="products-card-stars card-buttons-item" src="#" alt="2 звезды">
+                <div class="stars-favorite">
+                  <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3" />
+                  </svg>
+                  <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3" />
+                  </svg>
+                </div>
                 <span class="products-card-rating card-buttons-item">РЕЙТИНГ: 5,0</span>
               </li>
             </ul>
