--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul class="navigation-user-menu">
 
             <li class="navigation-user-item navigation-search">
-              <a class="navigation-user-link nav-link-icon-search" href="#">
+              <a class="navigation-user-link nav-link-icon-search" href="/modal.html">
                 <span class="visually-hidden">Поиск.</span>
               </a>
             </li>
@@ -135,7 +135,7 @@
           <span class="main-title search-hotel-title">ЗАИНТЕРЕСОВАЛИСЬ?</span>
           <p class="main-text search-hotel-text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие
             предложения гостиниц в Седоне</p>
-          <button class="button search-hotel search-hotel-dark">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
+          <a href="/modal.html" class="search-hotel-link">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
         </section>
 
         <section class="main-newsletter">
@@ -183,6 +183,85 @@
           </svg>
         </a>
       </footer>
+      <div class="modal-container">
+        <div class="modal modal-auth">
+          <h3 class="modal-title">Поиск гостиницы в Седоне</h3>
+          <button class="modal-close">
+            <svg class="modal-close-svg" width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M14 1.29231L12.7077 0L7 5.70769L1.29231 0L0 1.29231L5.70769 7L0 12.7077L1.29231 14L7 8.29231L12.7077 14L14 12.7077L8.29231 7L14 1.29231Z" fill="black"/>
+              </svg>
+            <span class="visually-hidden">Закрыть.</span>
+          </button>
+
+          <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
+            <ul class="modal-form-list">
+
+              <li class="modal-form-item">
+                <label class="modal-label-arrival" for="arrival-date">
+                  Дата Заезда:
+                </label>
+                <input class="modal-inpit-date modal-arrival-date" type="datetime" id="arrival-date" value="27 апреля 2020">
+                <span class="modal-alert modal-alert-wrong">Мы не можем отправить вас в прошлое.</spa>
+              </li>
+
+              <li class="modal-form-item">
+                <label class="modal-label-departure" for="departure-date">
+                  Дата Выезда:
+                </label>
+                <input class="modal-inpit-date modal-departure-date" type="datetime" id="departure-date" value="1 сентября 2023">
+                <span class="modal-alert">На эти даты есть свободные номера. Пока есть.</span>
+              </li>
+
+              <li class="modal-form-item-mini">
+                <div class="corent-container">
+                  <label class="modal-label-mini modal-counter-people" for="counter-people">
+                    Взрослые:
+                  </label>
+                  <input class="modal-counter modal-inpit-people-counter" id="counter-people" type="number" placeholder="2">
+                  <button type="button" class="sum-curent">
+                    <svg class="svg-sum-min"  width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157" fill-opacity="0.3"/>
+                    </svg>
+                  </button>
+                  <button type="button" class="min-curent">
+                    <svg class="svg-sum-min" width="14" height="2" viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0L0 2L14 2V0L0 0Z" fill="#756157" fill-opacity="0.3"/>
+                  </button>
+                </div>
+                <div class="corent-container">
+                  <span class="modal-label-mini">
+                    <label class="modal-label-mini modal-counter-children" for="counter-children">
+                      Дети:
+                    </label>
+                    <span class="tooltip">
+                      <button class="tooltip-toggle" aria-labelledby="tooltip-label-date">
+                        <svg class="tooltip-icon" width="2" height="12" viewBox="0 0 2 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H2V2H0V0ZM2 12H0V3H2V12Z" fill="white"/>
+                          </svg>
+                      </button>
+                      <span role="tooltip" class="tooltip-text" id="tooltip-label-date">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                    </span>
+                  </span>
+                  <input class="modal-counter modal-inpit-children-counter" id="counter-children" type="number" placeholder="2">
+                  <button type="button" class="sum-curent">
+                    <svg class="svg-sum-min"  width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="#756157" fill-opacity="0.3"/>
+                    </svg>
+                  </button>
+                  <button type="button" class="min-curent">
+                    <svg class="svg-sum-min"  width="14" height="2" viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0L0 2L14 2V0L0 0Z" fill="#756157" fill-opacity="0.3"/>
+                    </svg>
+                  </button>
+                </div>
+
+              </li>
+
+            </ul>
+            <button type="submit" class="modal-botton-search">найти</button>
+          </form>
+        </div>
+      </div>
     </div>
   </body>
 
